# symfc

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  changelog.html  documentation_options.js  genindex.html  index.html  install.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.cfg.bak  setup.py  setup.py.bak
.doctrees/: changelog.doctree  environment.pickle  index.doctree  install.doctree
.github/workflows/: publish-gh-pages.yml  publish-to-test-pypi.yml  tests.yml
_sources/: changelog.md
_static/: documentation_options.js
c/: _symfc.c
doc/: changelog.md  conf.py  index.md  install.md
examples/NaCl444-rd/: README.md  calc-fc.py  phonopy_NaCl444_rd.yaml.xz
src/symfc/: __init__.py  api_symfc.py  basis_set.py  basis_sets.py  fc_basis.py  (+8 more)
tests/: compact_fc_GaN_222.xz  compact_fc_GaN_442.xz  compact_fc_NaCl_222.xz  compact_fc_SiO2_221.xz  compact_fc_Si_111_fc3_2.xz  compact_fc_Si_111_fc3_3.xz  compact_fc_Si_111_fc4_2.xz  compact_fc_Si_111_fc4_3.xz  compact_fc_Si_111_fc4_4.xz  compact_fc_SnO2_223.xz  conftest.py  dfset_GaN_222_rd.xz  dfset_GaN_442_rd.xz  dfset_NaCl_222_rd.xz  dfset_SiO2_221_rd.xz  dfset_Si_111_fc3_rd.xz  dfset_SnO2_223_rd.xz  full_fc_NaCl_222.xz  full_fc_Si_111_fc3_2.xz  full_fc_Si_111_fc3_3.xz  full_fc_Si_111_fc4_2.xz  full_fc_Si_111_fc4_3.xz  full_fc_Si_111_fc4_4.xz  full_fc_Si_111_fc4_step_2.xz  full_fc_Si_111_fc4_step_3.xz  full_fc_Si_111_fc4_step_4.xz  full_fc_SnO2_223.xz  phonopy_GaN_222_rd.yaml.xz  phonopy_GaN_442_rd.yaml.xz  phonopy_NaCl_222_fc.yaml.xz  phonopy_NaCl_222_rd.yaml.xz  phonopy_SiO2_221_rd.yaml.xz  phonopy_SiO2_222_rd.yaml.xz  phonopy_SnO2_222_rd.yaml.xz  phonopy_SnO2_223_rd.yaml.xz  phonopy_to_python.py  test_api.py  test_api_linalg.py  test_basis_set.py  test_basis_sets.py  (+8 more)
(+110 files in other folders)
