[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "symfc"
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
description = "This is the symfc module."
authors = [
    { name = "Atsuto Seko", email = "seko@cms.mtl.kyoto-u.ac.jp" }
]
maintainers = [
    {name = "Atsushi Togo", email = "atztogo@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "spglib",
]
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/symfc/symfc"

[tool.setuptools.dynamic]
version = { attr = "symfc.version.__version__" }

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
